# mpc

./: CMakeLists.txt  Doxyfile  README.md  package.xml
cfg/: mpc.cfg
src/: CurrentEstimator.cpp  CurrentEstimator.h  DubinsWrapper.cpp  OtherCurrentEstimator.cpp  OtherCurrentEstimator.h  Plan.cpp  State.h  StateInterpolater.h  VehicleState.h  control_receiver.h  controller.cpp  controller.h  current_estimator.h  mpc_node.cpp
srv/: EstimateState.srv  UpdateReferenceTrajectory.srv
test/: NodeStub.cpp  NodeStub.h  test_controller.cpp
